--- a/.gitignore
+++ b/.gitignore
@@ -347,6 +347,8 @@ tmtags
 
 ##### VisualStudioCode
 .vscode/*
+.vscode
+**/.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
